src/core-crm/objects/Form_Assembly_Link_Settings__c/Form_Assembly_Link_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Form Assembly Link Settings</label>
</CustomObject>