src/core-crm/objects/Form_Assembly_Link_Settings__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <length>200</length>
    <type>Text</type>
</CustomField>