src/core-crm/objects/Form_Assembly_Link_Settings__c/fields/Activity_External__c.field-meta.xml
<CustomField>
    <fullName>Activity_External__c</fullName>
    <label>Activity External</label>
    <length>200</length>
    <type>Text</type>
</CustomField>