src/core-crm/objects/Form_Assembly_Link_Settings__c/fields/Group_Coaching__c.field-meta.xml
<CustomField>
    <fullName>Group_Coaching__c</fullName>
    <label>Group Coaching</label>
    <length>200</length>
    <type>Text</type>
</CustomField>