src/core-crm/objects/Form_Assembly_Link_Settings__c/fields/Individual_Coaching__c.field-meta.xml
<CustomField>
    <fullName>Individual_Coaching__c</fullName>
    <label>Individual Coaching</label>
    <length>200</length>
    <type>Text</type>
</CustomField>