src/core-crm/objects/Form_Assembly_Link_Settings__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <length>200</length>
    <type>Text</type>
</CustomField>