src/core-crm/objects/Form_Assembly_Link_Settings__c/fields/Module_External__c.field-meta.xml
<CustomField>
    <fullName>Module_External__c</fullName>
    <label>Module External</label>
    <length>200</length>
    <type>Text</type>
</CustomField>