src/core-crm/objects/Form_Assembly_Link_Settings__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <length>200</length>
    <type>Text</type>
</CustomField>