src/core-crm/objects/Form_Assembly_Link_Settings__c/fields/Program_Without_Pathway_External__c.field-meta.xml
<CustomField>
    <fullName>Program_Without_Pathway_External__c</fullName>
    <label>Program Without Pathway External</label>
    <length>200</length>
    <type>Text</type>
</CustomField>