src/core-crm/objects/Form_Assembly_Link_Settings__c/fields/Short_Course_External__c.field-meta.xml
<CustomField>
    <fullName>Short_Course_External__c</fullName>
    <label>Short Course External</label>
    <length>200</length>
    <type>Text</type>
</CustomField>