src/core-crm/objects/Form_Assembly_Link_Settings__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <length>200</length>
    <type>Text</type>
</CustomField>